--- a/DylanDeSouzaCurrencyConverter/DylanDeSouzaCurrencyConverter.UWP/DylanDeSouzaCurrencyConverter.UWP.csproj
+++ b/DylanDeSouzaCurrencyConverter/DylanDeSouzaCurrencyConverter.UWP/DylanDeSouzaCurrencyConverter.UWP.csproj
@@ -147,6 +147,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.3</Version>
     </PackageReference>
+    <PackageReference Include="System.Net.Http">
+      <Version>4.3.4</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2662" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.14" />
     <PackageReference Include="Xamarin.Essentials" Version="1.8.1" />
