--- a/DylanDeSouzaCurrencyConverter/DylanDeSouzaCurrencyConverter/DylanDeSouzaCurrencyConverter.csproj
+++ b/DylanDeSouzaCurrencyConverter/DylanDeSouzaCurrencyConverter/DylanDeSouzaCurrencyConverter.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Collections" Version="4.3.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2662" />
     <PackageReference Include="Xamarin.Essentials" Version="1.8.1" />
   </ItemGroup>
